<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/transparent"
  tools:context=".fragments.MechanicReportItemPricesFragment">

  <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/below_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

      <Button
              android:id="@+id/btnPrevious"
              style="@style/AppTheme.SimpleButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentStart="true"
              android:text="@string/btn_wizard_previous" />

      <Button
              android:id="@+id/btnNext"
              style="@style/AppTheme.SimpleButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:text="@string/btn_wizard_next"/>
    </RelativeLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/below_margin"
            android:text="@string/cap_mechanic_report_item_prices"
            android:textAlignment="center"
            android:textSize="18sp"/>

    <ListView
            android:id="@+id/lvItemPrices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/layout_item_price">
    </ListView>

  </LinearLayout>
</FrameLayout>